# devops

./: .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build.yml
ansible/: ansible.cfg
ansible/inventory/: aws_ec2.yml  hosts.txt
ansible/playbooks/: main.yml
ansible/roles/app_python/defaults/: main.yml
ansible/roles/app_python/tasks/: main.yml
ansible/roles/app_python/templates/: docker-compose.yml
ansible/roles/docker/defaults/: main.yml
ansible/roles/docker/tasks/: main.yml
ansible/roles/docker_compose/defaults/: main.yml
ansible/roles/docker_compose/tasks/: main.yml
docs/: CI.md  DOCKER.md  LOGGING.md  PYTHON.md  conf.py  index.rst
jenkins/: Jenkinsfile
k8s/: 11.md  12.md  README.md  deployment.yml  lab10.out  lab9.out  secrets.yaml  service.yml
k8s/your-app/: Chart.yaml  values.yaml
k8s/your-app/templates/: config.yaml  deployment.yaml  secrets.yaml
monitoring/: docker-compose.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: prometheus-config.yml
monitoring/promtail/: promtail-config.yml
tests/: context.py  test_web_app.py
web_app/: core.py  helpers.py
