[tool.poetry]
name = "devops_lab1"
version = "0.1.0"
description = "Simple web app to show current time in Moscow"
authors = ["Iskander Salimzhanov <iskabaur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
safety = "^1.10.3"
requests = "^2.26.0"
pytest = "^6.2.4"
Jinja2 = "^3.0.1"
black = "^21.7b0"
isort = "^5.9.3"
pyupgrade = "^2.24.0"
pre-commit = "^2.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
create = false
